<resources>
    <string name="app_name">Weight Loss Competition</string>
    <string name="password">password</string>
    <string name="log_in">Log in</string>
    <string name="email_address">email address</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
    <string name="sign_up">sign up</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="join_competition">Join Competition</string>
    <string name="create_competition">Create Competition</string>
    <string name="competition_name">competition name</string>
    <string name="start_date">start date</string>
    <string name="length_weeks">length (weeks)</string>
    <string name="app_banner">app banner</string>
    <string name="current_competition">Current Competition</string>
    <string name="loading">- LOADING -</string>
    <string name="view_details">View Details</string>
    <string name="record_weight">Record Weight</string>
    <string name="create_new_user">Create New User</string>
    <string name="list_of_competitions">List of Competitions</string>
    <string name="bottom">BOTTOM</string>
    <string name="list_item_competition_name">Competition Name</string>
    <string name="competition_details">Competition Details</string>
    <string name="competitions_list">Competitions List</string>
    <string name="submit">Submit</string>
    <string name="weight">weight</string>
    <string name="week_number">Week Number</string>
    <string name="enable_weekly_weigh_in_reminders">Enable weekly weigh-in reminders</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="leave_competition">Leave Competition</string>
    <string name="settings_menu_text">Weekly weigh-in reminders are enabled by default. To disable notifications, access your Android settings menu.</string>
    <string name="settings_menu_text_2">Note: When you leave a competition, your weight entries will be retained with that competition.</string>
    <string name="my_stats">My Stats</string>
    <string name="competition">Competition</string>
</resources>