<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Home">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/wlc_crop_textonly"
        android:contentDescription="@string/app_banner" />

    <Button
        android:id="@+id/buttonHome"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/home"
        android:textColor="@color/dull_yellow"
        app:backgroundTint="@color/slate_blue"
        app:layout_constraintEnd_toStartOf="@+id/buttonSettings"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/buttonSettings"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/settings"
        android:textColor="@color/dull_yellow"
        app:backgroundTint="@color/slate_blue"
        app:layout_constraintEnd_toStartOf="@+id/buttonLogout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonHome"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/buttonLogout"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/logout"
        android:textColor="@color/dull_yellow"
        app:backgroundTint="@color/slate_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonSettings"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSettings">

        <TextView
            android:id="@+id/tvText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/current_competition" />

        <View
            android:background="@color/slate_blue"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="0dp"
            android:layout_toLeftOf="@id/tvText"
            android:layout_marginStart="0dp"
            android:layout_toStartOf="@id/tvText" />

        <View
            android:background="@color/slate_blue"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="0dp"
            android:layout_toRightOf="@id/tvText"
            android:layout_marginEnd="0dp"
            android:layout_toEndOf="@id/tvText" />

    </RelativeLayout>

    <TextView
        android:id="@+id/textViewCurrentComp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/loading"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    <Button
        android:id="@+id/buttonCompetition"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/view_details"
        android:textColor="@color/dull_yellow"
        android:visibility="gone"
        app:backgroundTint="@color/slate_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCurrentComp" />

    <Button
        android:id="@+id/buttonJoinComp"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/join_competition"
        android:textColor="@color/dull_yellow"
        android:visibility="gone"
        app:backgroundTint="@color/slate_blue"
        app:layout_constraintEnd_toStartOf="@+id/buttonCreateComp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCurrentComp" />

    <Button
        android:id="@+id/buttonCreateComp"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/create_competition"
        android:textColor="@color/dull_yellow"
        android:visibility="gone"
        app:backgroundTint="@color/slate_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonJoinComp"
        app:layout_constraintTop_toBottomOf="@+id/textViewCurrentComp" />

    <Button
        android:id="@+id/buttonRecordWeight"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/record_weight"
        android:textColor="@color/dull_yellow"
        android:visibility="gone"
        app:backgroundTint="@color/slate_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_marginTop="104dp"
        android:background="@color/slate_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCurrentComp" />

</androidx.constraintlayout.widget.ConstraintLayout>