<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SignUp">

    <TextView
        android:id="@+id/bannerText"
        android:layout_width="416dp"
        android:layout_height="88dp"
        android:gravity="center"
        android:text="@string/create_new_user"
        android:textColor="@color/dull_yellow"
        android:textAllCaps="true"
        android:textSize="24sp"
        android:background="@drawable/box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/firstName"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:drawableRight="@drawable/ic_baseline_person_24"
        android:drawableEnd="@drawable/ic_baseline_person_24"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="text"
        android:maxLength="20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bannerText"
        app:layout_constraintVertical_bias="0.094" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/lastName"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:drawableRight="@drawable/ic_baseline_person_24"
        android:drawableEnd="@drawable/ic_baseline_person_24"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="text"
        android:maxLength="20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstName"
        app:layout_constraintVertical_bias="0.075" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:drawableRight="@drawable/ic_email"
        android:drawableEnd="@drawable/ic_email"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:maxLength="30"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastName"
        app:layout_constraintVertical_bias="0.089" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:drawableRight="@drawable/ic_password"
        android:drawableEnd="@drawable/ic_password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLength="30"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintVertical_bias="0.105" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"/>

    <Button
        android:id="@+id/buttonSignup"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="@color/dull_yellow"
        app:backgroundTint="@color/slate_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.354" />

    <TextView
        android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSignup"
        app:layout_constraintVertical_bias="0.491" />

</androidx.constraintlayout.widget.ConstraintLayout>