<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CreateComp">

    <ImageView
        android:id="@+id/bannerImage"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:contentDescription="@string/app_banner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/wlc_crop_textonly" />

    <Button
        android:id="@+id/buttonHome"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/home"
        android:textColor="@color/dull_yellow"
        app:backgroundTint="@color/slate_blue"
        app:layout_constraintEnd_toStartOf="@+id/buttonSettings"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bannerImage" />

    <Button
        android:id="@+id/buttonSettings"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/settings"
        android:textColor="@color/dull_yellow"
        app:backgroundTint="@color/slate_blue"
        app:layout_constraintEnd_toStartOf="@+id/buttonLogout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonHome"
        app:layout_constraintTop_toBottomOf="@+id/bannerImage" />

    <Button
        android:id="@+id/buttonLogout"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/logout"
        android:textColor="@color/dull_yellow"
        app:backgroundTint="@color/slate_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonSettings"
        app:layout_constraintTop_toBottomOf="@+id/bannerImage" />

    <View
        android:id="@+id/dividerOneTop"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="40dp"
        android:background="@color/slate_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSettings" />

    <TextView
        android:id="@+id/dividerOneText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/create_competition"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dividerOneTop" />

    <View
        android:id="@+id/dividerOneBottom"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="@color/slate_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dividerOneText" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/compName"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:drawableRight="@drawable/ic_baseline_people_24"
        android:drawableEnd="@drawable/ic_baseline_people_24"
        android:ems="10"
        android:hint="@string/competition_name"
        android:inputType="text"
        android:maxLength="30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dividerOneBottom" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/compStartDate"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:drawableRight="@drawable/ic_baseline_date_range_24"
        android:drawableEnd="@drawable/ic_baseline_date_range_24"
        android:ems="10"
        android:hint="@string/start_date"
        android:inputType="text"
        android:cursorVisible="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/compName" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/compLength"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:drawableRight="@drawable/ic_baseline_date_range_24"
        android:drawableEnd="@drawable/ic_baseline_date_range_24"
        android:ems="10"
        android:hint="@string/length_weeks"
        android:inputType="text"
        android:maxLength="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/compStartDate" />

    <Button
        android:id="@+id/buttonCreateComp"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/create_competition"
        android:textColor="@color/dull_yellow"
        app:backgroundTint="@color/slate_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/compLength" />

</androidx.constraintlayout.widget.ConstraintLayout>